# aa_app_factory

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  codex-plan-original.md  codex-plan.md  integration-brief.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  provider_interface_spec.md  vibe_check.ipynb
apps/agentic_app_template/service/: .env.sample  .gitignore  Containerfile  README.md  delete_cache.sh  pyproject.toml
apps/agentic_app_template/service/src/service/: clear_cache.sh  main.py  models.py  routes.py  settings.py  task_execution_manager.py  validate_settings.py  work_log_manager.py
apps/agentic_app_template/service/src/service/agent_core/: models.py  persistence_service.py
apps/law_monitoring/service/: .env.sample  .gitignore  Containerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  reset_db_and_cache.sh  setup_github_secrets.sh
apps/law_monitoring/service/alembic/: env.py
apps/law_monitoring/service/alembic/versions/: 2641f1afb993_seed_company_and_teams_from_storage.py  36b04be70fd1_add_evaluation_metrics_table.py  44a161304b00_remove_claim_field_from_citations_data_.py  4b3134666891_clean_non_relevant_citations_data_.py  88b83a9d1c8a_add_has_relevancy_column.py  9e79a89578b1_initial_schema.py
apps/law_monitoring/service/grafana_artifacts/: README.md  grafana-alerts-example.yaml  grafana-dashboard-example.json
apps/law_monitoring/service/src/service/: clear_filesystem_cache.py  clear_filesystem_cache.sh  company_config_service.py  dependencies.py  kernel.py  law_data_service.py  main.py  metrics.py  models.py  settings.py  task_execution.py  work_log.py
apps/law_monitoring/service/src/service/api/: __init__.py  application_config.py  company_config.py  dashboards.py  dependencies.py  laws.py  legal_acts.py  public.py  summary.py  user.py
apps/law_monitoring/service/src/service/core/: aleph_alpha_api_auth_service.py  constants.py
apps/law_monitoring/service/src/service/documentation/: EUR_LEX_README.md  MONITORING_README.md
apps/law_monitoring/service/src/service/evaluation/: README.md  csv_to_titles.py
apps/law_monitoring/service/src/service/law_core/: eur_lex_service.py  law_report_service.py  models.py
apps/law_monitoring/service/src/service/storage/: data_storage.py  in_memory_storage.py
apps/law_monitoring/service/src/service/tests/: test_prometheus_locally.py
apps/law_monitoring/service/tests/: conftest.py  test_chunker.py  test_citations.py  test_eur_lex_chunker.py  test_linechunker.py  test_models.py  test_paragraphchunker.py  test_relevancy_classifier_full_text.py  test_text_utils.py
apps/law_monitoring/skill/: .pre-commit-config.yaml  pyproject.toml
apps/supplier_analysis/service/: .env.sample  Containerfile  README.md  pyproject.toml  setup_github_secrets.sh
apps/supplier_analysis/service/preprocessed_artifacts/: 10bc0228-e41c-4d4a-8199-f55db41da5fd_company_data_report.html  10bc0228-e41c-4d4a-8199-f55db41da5fd_risks.xml  10bc0228-e41c-4d4a-8199-f55db41da5fd_risks_report.html  3aa7856d-5e02-407c-8079-4acb5a65292a_company_data_report.html  3aa7856d-5e02-407c-8079-4acb5a65292a_risks.xml  40e80dd3-8895-484d-b311-1eb384838059_company_data_report.html  40e80dd3-8895-484d-b311-1eb384838059_risks.xml  41914933-833b-44de-8124-fb909530435c_company_data_report.html  41914933-833b-44de-8124-fb909530435c_data.xml  4c03255e-2a75-48f9-bfb8-d4175a358c86_company_data_report.html  4c03255e-2a75-48f9-bfb8-d4175a358c86_risks.xml  8383dfe4-6e09-4dc3-8fd6-09d40d8a23ab_company_data_report.html  8383dfe4-6e09-4dc3-8fd6-09d40d8a23ab_data.xml  8c245a30-dc63-4045-8449-71c01507cf9e_company_data_report.html  8c245a30-dc63-4045-8449-71c01507cf9e_risks.xml  8c245a30-dc63-4045-8449-71c01507cf9e_risks_report.html  9b3f1f85-8858-4b2c-8ff8-e1babb34845b_company_data_report.html  9b3f1f85-8858-4b2c-8ff8-e1babb34845b_data.xml  9ca43347-71c8-4af1-922f-c4c42118853d_company_data_report.html  9ca43347-71c8-4af1-922f-c4c42118853d_risks.xml  9ca43347-71c8-4af1-922f-c4c42118853d_risks_report.html  9df0147c-ff38-420b-8d09-69ecaf22521c_company_data_report.html  9df0147c-ff38-420b-8d09-69ecaf22521c_risks.xml  fcf4bcd8-03df-4085-8c43-f3024a7a84a9_company_data_report.html  fcf4bcd8-03df-4085-8c43-f3024a7a84a9_data.xml
apps/supplier_analysis/service/src/service/: dependencies.py  main.py  routes.py  settings.py
apps/supplier_analysis/service/src/service/lksg_core/: models.py  persistence_service.py  utils.py
apps/supplier_briefing/service/: .env.sample  .gitignore  Containerfile  README.md  clear_llm_cache.py  lint.sh  pyproject.toml
apps/supplier_briefing/service/src/deployment/: README.md  deploy.py  deploy_settings.py  deployment-config.json  vertex_secret_manager.py
apps/supplier_briefing/service/src/eda/: select_columns_with_differences.py
apps/supplier_briefing/service/src/evaluation/: README.md
apps/supplier_briefing/service/src/evaluation/core/: agent_runner.py  (+6 more)
apps/supplier_briefing/service/src/service/: clear_cache.sh  data_loading.py  data_preparation.py  data_preparation_file_mapping.py  data_preparation_state.py  data_schema_analysis.py  dependencies.py  download_and_preprocess_data.py  download_raw_data.py  main.py  manifest.py  metrics.py  pandas_merge_util.py  pharia_data_storage_backend.py  raw_data_syncer.py  risk_columns.py  routes.py  settings.py  upload_raw_data.py  utils.py  work_log_manager.py
apps/supplier_briefing/service/tests/: test_business_partner_products_tool.py  test_find_branches_tool.py  test_find_category_or_product.py  test_find_natural_resource_tool.py  test_find_partner_id_by_name_tool.py  test_fuzzy_search_utils.py  test_inspect_column_values_tool.py  test_pandas_comparator.py  test_pandas_merge_util.py
apps/supplier_briefing/service/tests/agent_core/: test_model_tools_manager.py
apps/supplier_briefing/service/tests/data_tests/: conftest.py  test_business_partner_data.py  test_data_preparation.py  test_datenerfassung_column.py  test_eda_brutto_df.py  test_filter_empty_values.py  test_pseudo_primary_key_information.py  test_risk_data.py  test_transactions_data.py  utils.py
(+559 files in other folders)
