[project]
name = "law-monitoring-skill"
license = "Apache-2.0"
version = "0.1.0"
authors = [{ name = "Aleph Alpha Engineering", email = "engineering@aleph-alpha.com" }]
description = "Skill Example"

requires-python = "~=3.12"

dependencies = ["pharia-kernel-sdk-py==0.5"]

[dependency-groups]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.9.4",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "jfrog"
url = "https://alephalpha.jfrog.io/artifactory/api/pypi/python/simple"
explicit = true

[tool.uv.sources]
pharia-kernel-sdk-py = { index = "jfrog" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
